julius/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: spin
  name: spinnaker
  namespace: spinnaker
spec:
  rules:
  - host: spinnaker.se.armory.io
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
        path: /
  - host: spinnaker-gate.se.armory.io
    http:
      paths:
      - backend:
          serviceName: spin-gate
          servicePort: 8084
        path: /
  tls:
  - hosts:
    - spinnaker.se.armory.io
    - spinnaker-gate.se.armory.io
    secretName: julius-cert
